# MBDextract

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  dicts.c  dicts.h  index.html  mbdextract.c  params.json
src/: Makefile.am  Makefile.in  mbdextract.c
